update demo